--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 
 <body class="p-4">
   <h1 class="">Roommates</h1>
-  <hr class="mb-5 bg-light w-25 mx-auto" />
+  <hr class="mb-5 bg-light w-25 mx-auto">
   <div class="row w-100 m-auto">
     <div class="col-4">
       <h5>Roommates</h5>
@@ -25,35 +25,68 @@
           <th>Debe</th>
           <th>Recibe</th>
         </thead>
-        <tbody id="roommates"></tbody>
+        <tbody class="text-white" id="roommates"></tbody>
       </table>
     </div>
     <div class="col-4">
-      <h5>Gastos</h5>
-      <button class="btn text-white mb-2" onclick="nuevoGasto()">
-        Agregar gasto
-      </button>
-      <table class="table">
-        <thead class="text-white">
-          <th>Roommate</th>
-          <th>Descripción</th>
-          <th>Monto</th>
-          <th>Acciones</th>
-        </thead>
-        <tbody id="gastos"></tbody>
-      </table>
+      <div class="border rounded p-2 m-auto p-4">
+        <h4>Agregar Gasto</h4>
+        <hr class="bg-light w-25 mx-auto">
+        <div class="d-flex flex-column align-items-center">
+          <h6>Roommate</h6>
+          <select class="form-control w-50 mb-2" id="roommatesSelect"></select>
+          <h6>Descripción</h6>
+          <textarea class="form-control w-50 mb-2" id="descripcion">Articulos de limpieza</textarea>
+          <h6>Monto:</h6>
+          <input class="form-control w-50 mb-2" id="monto" type="number" value="15000">
+        </div>
+        <div class="d-block my-1">
+          <button class="btn text-white m-auto" onclick="nuevoGasto()">
+            Agregar
+          </button>
+        </div>
+      </div>
     </div>
     <div class="col-4">
-      <h5>Resumen</h5>
-      <div class="alert alert-success d-none" id="alerta"></div>
-      <table class="table">
-        <thead class="text-white">
-          <th>Roommate</th>
-          <th>Recibe</th>
-          <th>Debe</th>
-        </thead>
-        <tbody id="resumen"></tbody>
-      </table>
+      <div>
+        <h4>Historial</h4>
+        <hr class="bg-light w-25 mx-auto">
+        <table class="table">
+          <thead class="text-white">
+            <th>Nombre</th>
+            <th>Comentario</th>
+            <th>Monto</th>
+            <th>-</th>
+          </thead>
+          <tbody class="text-white" id="gastosHistorial"></tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <div class="border rounded p-2 m-auto p-4">
+            <h4>Editar Gasto</h4>
+            <hr class="bg-light w-25 mx-auto">
+            <div class="d-flex flex-column align-items-center">
+              <h6>Roommate</h6>
+              <select class="form-control w-50 mb-2" id="roommatesSelectModal"></select>
+              <h6>Descripción</h6>
+              <textarea class="form-control w-50 mb-2" id="descripcionModal">Articulos de limpieza</textarea>
+              <h6>Monto:</h6>
+              <input class="form-control w-50 mb-2" id="montoModal" type="number" value="20000">
+            </div>
+            <div class="d-block my-1">
+              <button class="btn text-white m-auto" onclick="updateGasto()">
+                Agregar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -66,96 +99,149 @@
     crossorigin="anonymous"></script>
 
   <script>
+    let roommates = [];
+    let gastos = [];
+    let gastoEditing = null;
+
+    const cargarRoommates = async () => {
+      const res = await fetch('http://localhost:3000/roommates');
+      const data = await res.json();
+      roommates = data;
+      const roommatesSelect = document.querySelector('#roommatesSelect');
+      const roommatesSelectModal = document.querySelector('#roommatesSelectModal');
+      roommatesSelect.innerHTML = '';
+      roommatesSelectModal.innerHTML = '';
+      roommates.forEach((roommate) => {
+        roommatesSelect.innerHTML += `<option value="${roommate.id}">${roommate.nombre}</option>`;
+        roommatesSelectModal.innerHTML += `<option value="${roommate.id}">${roommate.nombre}</option>`;
+      });
+    };
+
+    const cargarGastos = async () => {
+      const res = await fetch('http://localhost:3000/gastos');
+      const data = await res.json();
+      gastos = data;
+      const gastosHistorial = document.querySelector('#gastosHistorial');
+      gastosHistorial.innerHTML = '';
+      gastos.forEach((gasto) => {
+        gastosHistorial.innerHTML += `
+            <tr>
+              <td>${gasto.roommate_id}</td>
+              <td>${gasto.descripcion}</td>
+              <td>${gasto.monto}</td>
+              <td class="d-flex align-items-center justify-content-between">
+                <i class="fas fa-edit text-warning" onclick="editarGasto('${gasto.id}')" data-toggle="modal" data-target="#exampleModal"></i>
+                <i class="fas fa-trash-alt text-danger" onclick="borrarGasto('${gasto.id}')"></i>
+              </td>
+            </tr>
+          `;
+      });
+    };
+
+    const nuevoGasto = async () => {
+      const descripcion = document.querySelector('#descripcion').value;
+      const monto = parseFloat(document.querySelector('#monto').value);
+      const roommate_id = document.querySelector('#roommatesSelect').value;
+
+      try {
+        const response = await fetch('http://localhost:3000/gastos', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ roommate_id, descripcion, monto }),
+        });
+
+        if (!response.ok) {
+          const errorData = await response.json();
+          throw new Error(errorData.error || 'Error al crear gasto');
+        }
+
+        const gasto = await response.json();
+        await cargarGastos();
+      } catch (error) {
+        console.error(error);
+        alert(`Error al crear gasto: ${error.message}`);
+      }
+    };
+
+
+    const editarGasto = (id) => {
+      gastoEditing = id;
+      const gasto = gastos.find((g) => g.id == id);
+      document.querySelector('#roommatesSelectModal').value = gasto.roommate_id;
+      document.querySelector('#descripcionModal').value = gasto.descripcion;
+      document.querySelector('#montoModal').value = gasto.monto;
+    };
+
+    const updateGasto = async () => {
+      const descripcion = document.querySelector('#descripcionModal').value;
+      const monto = parseFloat(document.querySelector('#montoModal').value);
+      const roommate_id = document.querySelector('#roommatesSelectModal').value;
+
+      try {
+        const response = await fetch(`/gastos?id=${gastoEditing}`, {
+          method: 'PUT',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ roommate_id, descripcion, monto }),
+        });
+
+        if (!response.ok) {
+          throw new Error('Error al actualizar gasto');
+        }
+
+        const gasto = await response.json();
+        await cargarGastos();
+        $('#exampleModal').modal('hide');
+      } catch (error) {
+        console.error(error);
+        alert('Error al actualizar gasto');
+      }
+    };
+
+    const borrarGasto = async (id) => {
+      try {
+        const response = await fetch(`/gastos?id=${id}`, {
+          method: 'DELETE',
+        });
+
+        if (!response.ok) {
+          throw new Error('Error al borrar gasto');
+        }
+
+        const gasto = await response.json();
+        await cargarGastos();
+      } catch (error) {
+        console.error(error);
+        alert('Error al borrar gasto');
+      }
+    };
+
+    const nuevoRoommate = async () => {
+      try {
+        const response = await fetch('/roommates', {
+          method: 'POST',
+        });
+
+        if (!response.ok) {
+          throw new Error('Error al crear roommate');
+        }
+
+        const roommate = await response.json();
+        await cargarRoommates();
+      } catch (error) {
+        console.error(error);
+        alert('Error al crear roommate');
+      }
+    };
+
     document.addEventListener('DOMContentLoaded', async () => {
       await cargarRoommates();
       await cargarGastos();
     });
-
-    async function cargarRoommates() {
-      const response = await fetch('/roommates');
-      const roommates = await response.json();
-      const tbody = document.querySelector('#roommates');
-      tbody.innerHTML = '';
-
-      roommates.forEach((roommate) => {
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${roommate.nombre}</td>
-          <td></td>
-          <td></td>
-        `;
-        tbody.appendChild(tr);
-      });
-    }
-
-    async function nuevoRoommate() {
-      const response = await fetch('/roommates', {
-        method: 'POST',
-      });
-      const roommate = await response.json();
-      await cargarRoommates();
-    }
-
-    async function cargarGastos() {
-      const response = await fetch('/gastos');
-      const gastos = await response.json();
-      const tbody = document.querySelector('#gastos');
-      tbody.innerHTML = '';
-
-      gastos.forEach((gasto) => {
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${gasto.roommate_id}</td>
-          <td>${gasto.descripcion}</td>
-          <td>${gasto.monto}</td>
-          <td>
-            <button onclick="editarGasto('${gasto.id}')">Editar</button>
-            <button onclick="eliminarGasto('${gasto.id}')">Eliminar</button>
-          </td>
-        `;
-        tbody.appendChild(tr);
-      });
-    }
-
-    async function nuevoGasto() {
-      const descripcion = prompt('Descripción del gasto:');
-      const monto = prompt('Monto del gasto:');
-      const roommate_id = prompt('ID del roommate:');
-      const response = await fetch('/gastos', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ roommate_id, descripcion, monto }),
-      });
-      const gasto = await response.json();
-      await cargarGastos();
-    }
-
-    async function editarGasto(id) {
-      const descripcion = prompt('Nueva descripción del gasto:');
-      const monto = prompt('Nuevo monto del gasto:');
-      const roommate_id = prompt('Nuevo ID del roommate:');
-      const response = await fetch('/gastos', {
-        method: 'PUT',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ id, roommate_id, descripcion, monto }),
-      });
-      const gasto = await response.json();
-      await cargarGastos();
-    }
-
-    async function eliminarGasto(id) {
-      const response = await fetch(`/gastos?id=${id}`, {
-        method: 'DELETE',
-      });
-      const gasto = await response.json();
-      await cargarGastos();
-    }
   </script>
-
   <style>
     body {
       text-align: center;
